# robotdataset

./: .gitignore  AGENT.md  README.md  env_setup.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml
agent/: Table30v2.md  WIP_episode_sampler_batch.md  batch_output.md  decisions.md  doc.md  episode_viz.md
doc/: Agibot.md  OXE.md  README.md  Table30v2.md  WIP_episode_sampler_batch.md  overview.md  samplers.md  visualization.md
doc/datasets/: agibot.md  oxe.md  oxe_jax.md  table30v2.md
example/: example_agibot.ipynb  example_oxe.ipynb  example_oxe_jax.ipynb  example_table30v2.ipynb
robotdataset/: __init__.py  _common.py  agibot_dataset.py  libero_dataset.py  oxe_dataset.py  oxe_jax_dataset.py  robomimic_dataset.py  table30v2_dataset.py
robotdataset/agibot/: loader.py  memmap_builder.py  video_decoder.py
robotdataset/hf/: loader.py  memmap_builder.py
robotdataset/oxe/: __init__.py  bucket.py  episode_nth_second_sampler.py  episode_tubelet_sampler.py  memmap_builder.py  temporal_sampler.py  utils.py
robotdataset/utils/: __init__.py  visualization.py
test/: Dockerfile  data_config.py  docker-compose.yml  entrypoint.sh  obs_dict_5.pt  receiver.py  run.sh  sender.py  test_agibot_dataset.py  test_libero_dataset.py  test_oxe_dataset.py  test_oxe_jax_dataset.py  test_table30v2_dataset.py
