[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "robotdataset"
version = "0.1.4"
description = "A TorchRL wrapper for robot learning datasets."
authors = [
    { name = "Robotics Action Group", email = "vaishnavahari.seenivasan@rwth-aachen.de" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "ipykernel>=6.16.2",
    "numpy>=1.21.6",
    "tensordict>=0.2.1",
    "torch>=1.13.1",
    "torchrl>=0.2.0",
    "tqdm>=4.64.0",
    "imageio[ffmpeg]",
]

[project.optional-dependencies]
oxe = [
    "tensorflow>=2.11.1",
    "tensorflow-datasets>=4.8.2",
]
hf = [
    "datasets>=2.14.0",
    "huggingface_hub>=0.19.0",
    "Pillow>=9.0",
]
dev = [
    "pytest>=7.0",
]

[tool.pytest.ini_options]
testpaths = ["test"]

[project.urls]
Homepage = "https://github.com/robotics-action-group/robotdataset"
Repository = "https://github.com/robotics-action-group/robotdataset.git"

